parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    TRUE
    AND
    FALSE
    NOT
    OR

Grammar

Rule 0     S' -> PROGRAMA
Rule 1     FINAL -> <empty>
Rule 2     PROGRAMA -> PROGRAMAZ FUNCION PRINCIPAL
Rule 3     PROGRAMAZ -> FINAL
Rule 4     PROGRAMAZ -> GLOBALES
Rule 5     GLOBALES -> GLOBAL VART
Rule 6     VART -> DRAW ID EQUAL NEW DRAWI LPAR RPAR
Rule 7     VART -> DATA_TIPOS ID VARZ
Rule 8     VART -> ARR ID
Rule 9     VARZ -> FINAL
Rule 10    VARZ -> EQUAL EXP
Rule 11    ESTATUTO -> ASIGNACION
Rule 12    ESTATUTO -> CONDICION
Rule 13    ESTATUTO -> CICLO
Rule 14    ESTATUTO -> ACCION
Rule 15    ESTATUTO -> VART
Rule 16    ESTATUTO -> LLAMADA_FUNCION
Rule 17    ESTATUTO -> IMPRIMIR
Rule 18    BLOQUE -> ESTATUTO BLOQUEP
Rule 19    BLOQUEP -> BLOQUE
Rule 20    BLOQUEP -> FINAL
Rule 21    DATA_TIPOS -> INT
Rule 22    DATA_TIPOS -> BOOLEAN
Rule 23    DATA_TIPOS -> CHAR
Rule 24    DATA_TIPOS -> STRING
Rule 25    DATA_TIPOS -> FLOAT
Rule 26    ASOP -> PLUS
Rule 27    ASOP -> MINUS
Rule 28    MDOP -> MULT
Rule 29    MDOP -> DIVI
Rule 30    ASIGNACION -> ID ASIGNACIONP
Rule 31    ASIGNACIONP -> EQUAL EXPRE
Rule 32    ASIGNACIONP -> LBRA ICTE ASIGNACIONZ RBRA
Rule 33    ASIGNACIONZ -> COMMA ICTE
Rule 34    ASIGNACIONZ -> FINAL
Rule 35    ARR -> DATA_TIPOS LBRA ICTE ARRZ RBRA
Rule 36    ARRZ -> COMMA ICTE
Rule 37    ARRZ -> FINAL
Rule 38    LLAMADA_FUNCION -> ID LPAR LLAMADA_FUNCIONP RPAR
Rule 39    LLAMADA_FUNCIONP -> EXPRE LLAMADA_FUNCIONZ
Rule 40    LLAMADA_FUNCIONP -> FINAL
Rule 41    LLAMADA_FUNCIONZ -> COMMA LLAMADA_FUNCIONP
Rule 42    LLAMADA_FUNCIONZ -> FINAL
Rule 43    PRINCIPAL -> DEFINE VOID MAIN LPAR RPAR BLOQUE END
Rule 44    CICLO -> WHILEF
Rule 45    CICLO -> FORZ
Rule 46    WHILEF -> WHILE LPAR EXPRE RPAR BLOQUE END
Rule 47    FORZ -> FOR LPAR ICTE COMMA ICTE COMMA ICTE RPAR BLOQUE END
Rule 48    CONDICION -> IF LPAR EXPRE RPAR BLOQUE CONDICIONP END
Rule 49    CONDICIONP -> ELSE CONDICIONZ
Rule 50    CONDICIONP -> FINAL
Rule 51    CONDICIONZ -> BLOQUE
Rule 52    CONDICIONZ -> CONDICION
Rule 53    RELOP -> LESSTH
Rule 54    RELOP -> GREATERTH
Rule 55    RELOP -> SEQUAL
Rule 56    RELOP -> NOTEQ
Rule 57    RELOP -> LESSEQTH
Rule 58    RELOP -> GREATEREQTH
Rule 59    EXPRE -> EXP EXPREZ
Rule 60    EXPREZ -> RELOP EXP
Rule 61    EXPREZ -> FINAL
Rule 62    EXP -> TERMINO EXP_W_SIGN
Rule 63    EXP_W_SIGN -> ASOP EXP
Rule 64    EXP_W_SIGN -> FINAL
Rule 65    TERMINO -> FAC TERMINO_W_SIGN
Rule 66    TERMINO_W_SIGN -> MDOP TERMINO
Rule 67    TERMINO_W_SIGN -> FINAL
Rule 68    VAR_CTE -> ICTE
Rule 69    VAR_CTE -> FCTE
Rule 70    VAR_CTE -> LLAMADA_FUNCION
Rule 71    IMPRIMIR -> PRINT LBRA IMPRIMIRZ RBRA
Rule 72    IMPRIMIRZ -> EXPRE
Rule 73    IMPRIMIRZ -> SCTE
Rule 74    FAC -> LPAR EXPRE RPAR
Rule 75    FAC -> FACS VAR_CTE
Rule 76    FAC -> ID FACT
Rule 77    FACT -> LBRA EXP FACZ RBRA
Rule 78    FACT -> FINAL
Rule 79    FACS -> ASOP
Rule 80    FACS -> FINAL
Rule 81    FACZ -> COMMA EXP
Rule 82    FACZ -> FINAL
Rule 83    FUNCION -> DEFINE DATA_TIPOS ID VAR_FUN BLOQUE RETURN EXP END
Rule 84    ACCION -> ID POINT DIBUJA LPAR VAR_CTE RPAR
Rule 85    VAR_FUN -> LPAR VAR_FUNP RPAR
Rule 86    VAR_FUNP -> DATA_TIPOS ID VAR_FUNZ
Rule 87    VAR_FUNZ -> COMMA VAR_FUNP
Rule 88    VAR_FUNZ -> FINAL
Rule 89    DIBUJA -> DEFINIRPOSICION
Rule 90    DIBUJA -> DEFINIRCOLOR
Rule 91    DIBUJA -> DERECHO
Rule 92    DIBUJA -> REVERSA
Rule 93    DIBUJA -> IZQUIERDA
Rule 94    DIBUJA -> DERECHA
Rule 95    DIBUJA -> VELOCIDAD
Rule 96    DIBUJA -> BORRAR
Rule 97    DIBUJA -> MOSTRAR
Rule 98    DIBUJA -> OCULTAR
Rule 99    DIBUJA -> CIRCULO
Rule 100   DIBUJA -> DEFINIRX
Rule 101   DIBUJA -> DEFINIRY
Rule 102   DIBUJA -> ARCO
Rule 103   DIBUJA -> GROSOR

Terminals, with rules where they appear

AND                  : 
ARCO                 : 102
BOOLEAN              : 22
BORRAR               : 96
CHAR                 : 23
CIRCULO              : 99
COMMA                : 33 36 41 47 47 81 87
DEFINE               : 43 83
DEFINIRCOLOR         : 90
DEFINIRPOSICION      : 89
DEFINIRX             : 100
DEFINIRY             : 101
DERECHA              : 94
DERECHO              : 91
DIVI                 : 29
DRAW                 : 6
DRAWI                : 6
ELSE                 : 49
END                  : 43 46 47 48 83
EQUAL                : 6 10 31
FALSE                : 
FCTE                 : 69
FLOAT                : 25
FOR                  : 47
GLOBAL               : 5
GREATEREQTH          : 58
GREATERTH            : 54
GROSOR               : 103
ICTE                 : 32 33 35 36 47 47 47 68
ID                   : 6 7 8 30 38 76 83 84 86
IF                   : 48
INT                  : 21
IZQUIERDA            : 93
LBRA                 : 32 35 71 77
LESSEQTH             : 57
LESSTH               : 53
LPAR                 : 6 38 43 46 47 48 74 84 85
MAIN                 : 43
MINUS                : 27
MOSTRAR              : 97
MULT                 : 28
NEW                  : 6
NOT                  : 
NOTEQ                : 56
OCULTAR              : 98
OR                   : 
PLUS                 : 26
POINT                : 84
PRINT                : 71
RBRA                 : 32 35 71 77
RETURN               : 83
REVERSA              : 92
RPAR                 : 6 38 43 46 47 48 74 84 85
SCTE                 : 73
SEQUAL               : 55
STRING               : 24
TRUE                 : 
VELOCIDAD            : 95
VOID                 : 43
WHILE                : 46
error                : 

Nonterminals, with rules where they appear

ACCION               : 14
ARR                  : 8
ARRZ                 : 35
ASIGNACION           : 11
ASIGNACIONP          : 30
ASIGNACIONZ          : 32
ASOP                 : 63 79
BLOQUE               : 19 43 46 47 48 51 83
BLOQUEP              : 18
CICLO                : 13
CONDICION            : 12 52
CONDICIONP           : 48
CONDICIONZ           : 49
DATA_TIPOS           : 7 35 83 86
DIBUJA               : 84
ESTATUTO             : 18
EXP                  : 10 59 60 63 77 81 83
EXPRE                : 31 39 46 48 72 74
EXPREZ               : 59
EXP_W_SIGN           : 62
FAC                  : 65
FACS                 : 75
FACT                 : 76
FACZ                 : 77
FINAL                : 3 9 20 34 37 40 42 50 61 64 67 78 80 82 88
FORZ                 : 45
FUNCION              : 2
GLOBALES             : 4
IMPRIMIR             : 17
IMPRIMIRZ            : 71
LLAMADA_FUNCION      : 16 70
LLAMADA_FUNCIONP     : 38 41
LLAMADA_FUNCIONZ     : 39
MDOP                 : 66
PRINCIPAL            : 2
PROGRAMA             : 0
PROGRAMAZ            : 2
RELOP                : 60
TERMINO              : 62 66
TERMINO_W_SIGN       : 65
VART                 : 5 15
VARZ                 : 7
VAR_CTE              : 75 84
VAR_FUN              : 83
VAR_FUNP             : 85 87
VAR_FUNZ             : 86
WHILEF               : 44

Parsing method: LALR

state 0

    (0) S' -> . PROGRAMA
    (2) PROGRAMA -> . PROGRAMAZ FUNCION PRINCIPAL
    (3) PROGRAMAZ -> . FINAL
    (4) PROGRAMAZ -> . GLOBALES
    (1) FINAL -> .
    (5) GLOBALES -> . GLOBAL VART

    DEFINE          reduce using rule 1 (FINAL -> .)
    GLOBAL          shift and go to state 2

    PROGRAMAZ                      shift and go to state 1
    GLOBALES                       shift and go to state 3
    PROGRAMA                       shift and go to state 4
    FINAL                          shift and go to state 5

state 1

    (2) PROGRAMA -> PROGRAMAZ . FUNCION PRINCIPAL
    (83) FUNCION -> . DEFINE DATA_TIPOS ID VAR_FUN BLOQUE RETURN EXP END

    DEFINE          shift and go to state 7

    FUNCION                        shift and go to state 6

state 2

    (5) GLOBALES -> GLOBAL . VART
    (6) VART -> . DRAW ID EQUAL NEW DRAWI LPAR RPAR
    (7) VART -> . DATA_TIPOS ID VARZ
    (8) VART -> . ARR ID
    (21) DATA_TIPOS -> . INT
    (22) DATA_TIPOS -> . BOOLEAN
    (23) DATA_TIPOS -> . CHAR
    (24) DATA_TIPOS -> . STRING
    (25) DATA_TIPOS -> . FLOAT
    (35) ARR -> . DATA_TIPOS LBRA ICTE ARRZ RBRA

    DRAW            shift and go to state 9
    INT             shift and go to state 13
    BOOLEAN         shift and go to state 16
    CHAR            shift and go to state 14
    STRING          shift and go to state 11
    FLOAT           shift and go to state 10

    VART                           shift and go to state 8
    ARR                            shift and go to state 15
    DATA_TIPOS                     shift and go to state 12

state 3

    (4) PROGRAMAZ -> GLOBALES .

    DEFINE          reduce using rule 4 (PROGRAMAZ -> GLOBALES .)


state 4

    (0) S' -> PROGRAMA .



state 5

    (3) PROGRAMAZ -> FINAL .

    DEFINE          reduce using rule 3 (PROGRAMAZ -> FINAL .)


state 6

    (2) PROGRAMA -> PROGRAMAZ FUNCION . PRINCIPAL
    (43) PRINCIPAL -> . DEFINE VOID MAIN LPAR RPAR BLOQUE END

    DEFINE          shift and go to state 18

    PRINCIPAL                      shift and go to state 17

state 7

    (83) FUNCION -> DEFINE . DATA_TIPOS ID VAR_FUN BLOQUE RETURN EXP END
    (21) DATA_TIPOS -> . INT
    (22) DATA_TIPOS -> . BOOLEAN
    (23) DATA_TIPOS -> . CHAR
    (24) DATA_TIPOS -> . STRING
    (25) DATA_TIPOS -> . FLOAT

    INT             shift and go to state 13
    BOOLEAN         shift and go to state 16
    CHAR            shift and go to state 14
    STRING          shift and go to state 11
    FLOAT           shift and go to state 10

    DATA_TIPOS                     shift and go to state 19

state 8

    (5) GLOBALES -> GLOBAL VART .

    DEFINE          reduce using rule 5 (GLOBALES -> GLOBAL VART .)


state 9

    (6) VART -> DRAW . ID EQUAL NEW DRAWI LPAR RPAR

    ID              shift and go to state 20


state 10

    (25) DATA_TIPOS -> FLOAT .

    ID              reduce using rule 25 (DATA_TIPOS -> FLOAT .)
    LBRA            reduce using rule 25 (DATA_TIPOS -> FLOAT .)


state 11

    (24) DATA_TIPOS -> STRING .

    ID              reduce using rule 24 (DATA_TIPOS -> STRING .)
    LBRA            reduce using rule 24 (DATA_TIPOS -> STRING .)


state 12

    (7) VART -> DATA_TIPOS . ID VARZ
    (35) ARR -> DATA_TIPOS . LBRA ICTE ARRZ RBRA

    ID              shift and go to state 22
    LBRA            shift and go to state 21


state 13

    (21) DATA_TIPOS -> INT .

    ID              reduce using rule 21 (DATA_TIPOS -> INT .)
    LBRA            reduce using rule 21 (DATA_TIPOS -> INT .)


state 14

    (23) DATA_TIPOS -> CHAR .

    ID              reduce using rule 23 (DATA_TIPOS -> CHAR .)
    LBRA            reduce using rule 23 (DATA_TIPOS -> CHAR .)


state 15

    (8) VART -> ARR . ID

    ID              shift and go to state 23


state 16

    (22) DATA_TIPOS -> BOOLEAN .

    ID              reduce using rule 22 (DATA_TIPOS -> BOOLEAN .)
    LBRA            reduce using rule 22 (DATA_TIPOS -> BOOLEAN .)


state 17

    (2) PROGRAMA -> PROGRAMAZ FUNCION PRINCIPAL .

    $end            reduce using rule 2 (PROGRAMA -> PROGRAMAZ FUNCION PRINCIPAL .)


state 18

    (43) PRINCIPAL -> DEFINE . VOID MAIN LPAR RPAR BLOQUE END

    VOID            shift and go to state 24


state 19

    (83) FUNCION -> DEFINE DATA_TIPOS . ID VAR_FUN BLOQUE RETURN EXP END

    ID              shift and go to state 25


state 20

    (6) VART -> DRAW ID . EQUAL NEW DRAWI LPAR RPAR

    EQUAL           shift and go to state 26


state 21

    (35) ARR -> DATA_TIPOS LBRA . ICTE ARRZ RBRA

    ICTE            shift and go to state 27


state 22

    (7) VART -> DATA_TIPOS ID . VARZ
    (9) VARZ -> . FINAL
    (10) VARZ -> . EQUAL EXP
    (1) FINAL -> .

    EQUAL           shift and go to state 28
    DEFINE          reduce using rule 1 (FINAL -> .)
    ID              reduce using rule 1 (FINAL -> .)
    IF              reduce using rule 1 (FINAL -> .)
    DRAW            reduce using rule 1 (FINAL -> .)
    PRINT           reduce using rule 1 (FINAL -> .)
    WHILE           reduce using rule 1 (FINAL -> .)
    FOR             reduce using rule 1 (FINAL -> .)
    INT             reduce using rule 1 (FINAL -> .)
    BOOLEAN         reduce using rule 1 (FINAL -> .)
    CHAR            reduce using rule 1 (FINAL -> .)
    STRING          reduce using rule 1 (FINAL -> .)
    FLOAT           reduce using rule 1 (FINAL -> .)
    RETURN          reduce using rule 1 (FINAL -> .)
    END             reduce using rule 1 (FINAL -> .)
    ELSE            reduce using rule 1 (FINAL -> .)

    FINAL                          shift and go to state 30
    VARZ                           shift and go to state 29

state 23

    (8) VART -> ARR ID .

    ID              reduce using rule 8 (VART -> ARR ID .)
    IF              reduce using rule 8 (VART -> ARR ID .)
    DRAW            reduce using rule 8 (VART -> ARR ID .)
    PRINT           reduce using rule 8 (VART -> ARR ID .)
    WHILE           reduce using rule 8 (VART -> ARR ID .)
    FOR             reduce using rule 8 (VART -> ARR ID .)
    INT             reduce using rule 8 (VART -> ARR ID .)
    BOOLEAN         reduce using rule 8 (VART -> ARR ID .)
    CHAR            reduce using rule 8 (VART -> ARR ID .)
    STRING          reduce using rule 8 (VART -> ARR ID .)
    FLOAT           reduce using rule 8 (VART -> ARR ID .)
    END             reduce using rule 8 (VART -> ARR ID .)
    RETURN          reduce using rule 8 (VART -> ARR ID .)
    ELSE            reduce using rule 8 (VART -> ARR ID .)
    DEFINE          reduce using rule 8 (VART -> ARR ID .)


state 24

    (43) PRINCIPAL -> DEFINE VOID . MAIN LPAR RPAR BLOQUE END

    MAIN            shift and go to state 31


state 25

    (83) FUNCION -> DEFINE DATA_TIPOS ID . VAR_FUN BLOQUE RETURN EXP END
    (85) VAR_FUN -> . LPAR VAR_FUNP RPAR

    LPAR            shift and go to state 32

    VAR_FUN                        shift and go to state 33

state 26

    (6) VART -> DRAW ID EQUAL . NEW DRAWI LPAR RPAR

    NEW             shift and go to state 34


state 27

    (35) ARR -> DATA_TIPOS LBRA ICTE . ARRZ RBRA
    (36) ARRZ -> . COMMA ICTE
    (37) ARRZ -> . FINAL
    (1) FINAL -> .

    COMMA           shift and go to state 36
    RBRA            reduce using rule 1 (FINAL -> .)

    ARRZ                           shift and go to state 37
    FINAL                          shift and go to state 35

state 28

    (10) VARZ -> EQUAL . EXP
    (62) EXP -> . TERMINO EXP_W_SIGN
    (65) TERMINO -> . FAC TERMINO_W_SIGN
    (74) FAC -> . LPAR EXPRE RPAR
    (75) FAC -> . FACS VAR_CTE
    (76) FAC -> . ID FACT
    (79) FACS -> . ASOP
    (80) FACS -> . FINAL
    (26) ASOP -> . PLUS
    (27) ASOP -> . MINUS
    (1) FINAL -> .

  ! shift/reduce conflict for ID resolved as shift
    LPAR            shift and go to state 39
    ID              shift and go to state 47
    PLUS            shift and go to state 41
    MINUS           shift and go to state 46
    ICTE            reduce using rule 1 (FINAL -> .)
    FCTE            reduce using rule 1 (FINAL -> .)

  ! ID              [ reduce using rule 1 (FINAL -> .) ]

    ASOP                           shift and go to state 40
    TERMINO                        shift and go to state 42
    EXP                            shift and go to state 43
    FACS                           shift and go to state 44
    FAC                            shift and go to state 45
    FINAL                          shift and go to state 38

state 29

    (7) VART -> DATA_TIPOS ID VARZ .

    ID              reduce using rule 7 (VART -> DATA_TIPOS ID VARZ .)
    IF              reduce using rule 7 (VART -> DATA_TIPOS ID VARZ .)
    DRAW            reduce using rule 7 (VART -> DATA_TIPOS ID VARZ .)
    PRINT           reduce using rule 7 (VART -> DATA_TIPOS ID VARZ .)
    WHILE           reduce using rule 7 (VART -> DATA_TIPOS ID VARZ .)
    FOR             reduce using rule 7 (VART -> DATA_TIPOS ID VARZ .)
    INT             reduce using rule 7 (VART -> DATA_TIPOS ID VARZ .)
    BOOLEAN         reduce using rule 7 (VART -> DATA_TIPOS ID VARZ .)
    CHAR            reduce using rule 7 (VART -> DATA_TIPOS ID VARZ .)
    STRING          reduce using rule 7 (VART -> DATA_TIPOS ID VARZ .)
    FLOAT           reduce using rule 7 (VART -> DATA_TIPOS ID VARZ .)
    END             reduce using rule 7 (VART -> DATA_TIPOS ID VARZ .)
    RETURN          reduce using rule 7 (VART -> DATA_TIPOS ID VARZ .)
    ELSE            reduce using rule 7 (VART -> DATA_TIPOS ID VARZ .)
    DEFINE          reduce using rule 7 (VART -> DATA_TIPOS ID VARZ .)


state 30

    (9) VARZ -> FINAL .

    DEFINE          reduce using rule 9 (VARZ -> FINAL .)
    ID              reduce using rule 9 (VARZ -> FINAL .)
    IF              reduce using rule 9 (VARZ -> FINAL .)
    DRAW            reduce using rule 9 (VARZ -> FINAL .)
    PRINT           reduce using rule 9 (VARZ -> FINAL .)
    WHILE           reduce using rule 9 (VARZ -> FINAL .)
    FOR             reduce using rule 9 (VARZ -> FINAL .)
    INT             reduce using rule 9 (VARZ -> FINAL .)
    BOOLEAN         reduce using rule 9 (VARZ -> FINAL .)
    CHAR            reduce using rule 9 (VARZ -> FINAL .)
    STRING          reduce using rule 9 (VARZ -> FINAL .)
    FLOAT           reduce using rule 9 (VARZ -> FINAL .)
    RETURN          reduce using rule 9 (VARZ -> FINAL .)
    END             reduce using rule 9 (VARZ -> FINAL .)
    ELSE            reduce using rule 9 (VARZ -> FINAL .)


state 31

    (43) PRINCIPAL -> DEFINE VOID MAIN . LPAR RPAR BLOQUE END

    LPAR            shift and go to state 48


state 32

    (85) VAR_FUN -> LPAR . VAR_FUNP RPAR
    (86) VAR_FUNP -> . DATA_TIPOS ID VAR_FUNZ
    (21) DATA_TIPOS -> . INT
    (22) DATA_TIPOS -> . BOOLEAN
    (23) DATA_TIPOS -> . CHAR
    (24) DATA_TIPOS -> . STRING
    (25) DATA_TIPOS -> . FLOAT

    INT             shift and go to state 13
    BOOLEAN         shift and go to state 16
    CHAR            shift and go to state 14
    STRING          shift and go to state 11
    FLOAT           shift and go to state 10

    DATA_TIPOS                     shift and go to state 49
    VAR_FUNP                       shift and go to state 50

state 33

    (83) FUNCION -> DEFINE DATA_TIPOS ID VAR_FUN . BLOQUE RETURN EXP END
    (18) BLOQUE -> . ESTATUTO BLOQUEP
    (11) ESTATUTO -> . ASIGNACION
    (12) ESTATUTO -> . CONDICION
    (13) ESTATUTO -> . CICLO
    (14) ESTATUTO -> . ACCION
    (15) ESTATUTO -> . VART
    (16) ESTATUTO -> . LLAMADA_FUNCION
    (17) ESTATUTO -> . IMPRIMIR
    (30) ASIGNACION -> . ID ASIGNACIONP
    (48) CONDICION -> . IF LPAR EXPRE RPAR BLOQUE CONDICIONP END
    (44) CICLO -> . WHILEF
    (45) CICLO -> . FORZ
    (84) ACCION -> . ID POINT DIBUJA LPAR VAR_CTE RPAR
    (6) VART -> . DRAW ID EQUAL NEW DRAWI LPAR RPAR
    (7) VART -> . DATA_TIPOS ID VARZ
    (8) VART -> . ARR ID
    (38) LLAMADA_FUNCION -> . ID LPAR LLAMADA_FUNCIONP RPAR
    (71) IMPRIMIR -> . PRINT LBRA IMPRIMIRZ RBRA
    (46) WHILEF -> . WHILE LPAR EXPRE RPAR BLOQUE END
    (47) FORZ -> . FOR LPAR ICTE COMMA ICTE COMMA ICTE RPAR BLOQUE END
    (21) DATA_TIPOS -> . INT
    (22) DATA_TIPOS -> . BOOLEAN
    (23) DATA_TIPOS -> . CHAR
    (24) DATA_TIPOS -> . STRING
    (25) DATA_TIPOS -> . FLOAT
    (35) ARR -> . DATA_TIPOS LBRA ICTE ARRZ RBRA

    ID              shift and go to state 64
    IF              shift and go to state 65
    DRAW            shift and go to state 9
    PRINT           shift and go to state 55
    WHILE           shift and go to state 54
    FOR             shift and go to state 58
    INT             shift and go to state 13
    BOOLEAN         shift and go to state 16
    CHAR            shift and go to state 14
    STRING          shift and go to state 11
    FLOAT           shift and go to state 10

    VART                           shift and go to state 51
    CICLO                          shift and go to state 53
    LLAMADA_FUNCION                shift and go to state 56
    ASIGNACION                     shift and go to state 57
    ESTATUTO                       shift and go to state 52
    WHILEF                         shift and go to state 59
    DATA_TIPOS                     shift and go to state 12
    FORZ                           shift and go to state 60
    IMPRIMIR                       shift and go to state 62
    BLOQUE                         shift and go to state 63
    ARR                            shift and go to state 15
    ACCION                         shift and go to state 66
    CONDICION                      shift and go to state 61

state 34

    (6) VART -> DRAW ID EQUAL NEW . DRAWI LPAR RPAR

    DRAWI           shift and go to state 67


state 35

    (37) ARRZ -> FINAL .

    RBRA            reduce using rule 37 (ARRZ -> FINAL .)


state 36

    (36) ARRZ -> COMMA . ICTE

    ICTE            shift and go to state 68


state 37

    (35) ARR -> DATA_TIPOS LBRA ICTE ARRZ . RBRA

    RBRA            shift and go to state 69


state 38

    (80) FACS -> FINAL .

    ICTE            reduce using rule 80 (FACS -> FINAL .)
    FCTE            reduce using rule 80 (FACS -> FINAL .)
    ID              reduce using rule 80 (FACS -> FINAL .)


state 39

    (74) FAC -> LPAR . EXPRE RPAR
    (59) EXPRE -> . EXP EXPREZ
    (62) EXP -> . TERMINO EXP_W_SIGN
    (65) TERMINO -> . FAC TERMINO_W_SIGN
    (74) FAC -> . LPAR EXPRE RPAR
    (75) FAC -> . FACS VAR_CTE
    (76) FAC -> . ID FACT
    (79) FACS -> . ASOP
    (80) FACS -> . FINAL
    (26) ASOP -> . PLUS
    (27) ASOP -> . MINUS
    (1) FINAL -> .

  ! shift/reduce conflict for ID resolved as shift
    LPAR            shift and go to state 39
    ID              shift and go to state 47
    PLUS            shift and go to state 41
    MINUS           shift and go to state 46
    ICTE            reduce using rule 1 (FINAL -> .)
    FCTE            reduce using rule 1 (FINAL -> .)

  ! ID              [ reduce using rule 1 (FINAL -> .) ]

    EXPRE                          shift and go to state 70
    ASOP                           shift and go to state 40
    TERMINO                        shift and go to state 42
    EXP                            shift and go to state 71
    FACS                           shift and go to state 44
    FAC                            shift and go to state 45
    FINAL                          shift and go to state 38

state 40

    (79) FACS -> ASOP .

    ICTE            reduce using rule 79 (FACS -> ASOP .)
    FCTE            reduce using rule 79 (FACS -> ASOP .)
    ID              reduce using rule 79 (FACS -> ASOP .)


state 41

    (26) ASOP -> PLUS .

    ICTE            reduce using rule 26 (ASOP -> PLUS .)
    FCTE            reduce using rule 26 (ASOP -> PLUS .)
    ID              reduce using rule 26 (ASOP -> PLUS .)
    LPAR            reduce using rule 26 (ASOP -> PLUS .)
    PLUS            reduce using rule 26 (ASOP -> PLUS .)
    MINUS           reduce using rule 26 (ASOP -> PLUS .)


state 42

    (62) EXP -> TERMINO . EXP_W_SIGN
    (63) EXP_W_SIGN -> . ASOP EXP
    (64) EXP_W_SIGN -> . FINAL
    (26) ASOP -> . PLUS
    (27) ASOP -> . MINUS
    (1) FINAL -> .

    PLUS            shift and go to state 41
    MINUS           shift and go to state 46
    DEFINE          reduce using rule 1 (FINAL -> .)
    ID              reduce using rule 1 (FINAL -> .)
    IF              reduce using rule 1 (FINAL -> .)
    DRAW            reduce using rule 1 (FINAL -> .)
    PRINT           reduce using rule 1 (FINAL -> .)
    WHILE           reduce using rule 1 (FINAL -> .)
    FOR             reduce using rule 1 (FINAL -> .)
    INT             reduce using rule 1 (FINAL -> .)
    BOOLEAN         reduce using rule 1 (FINAL -> .)
    CHAR            reduce using rule 1 (FINAL -> .)
    STRING          reduce using rule 1 (FINAL -> .)
    FLOAT           reduce using rule 1 (FINAL -> .)
    RETURN          reduce using rule 1 (FINAL -> .)
    END             reduce using rule 1 (FINAL -> .)
    ELSE            reduce using rule 1 (FINAL -> .)
    LESSTH          reduce using rule 1 (FINAL -> .)
    GREATERTH       reduce using rule 1 (FINAL -> .)
    SEQUAL          reduce using rule 1 (FINAL -> .)
    NOTEQ           reduce using rule 1 (FINAL -> .)
    LESSEQTH        reduce using rule 1 (FINAL -> .)
    GREATEREQTH     reduce using rule 1 (FINAL -> .)
    RPAR            reduce using rule 1 (FINAL -> .)
    COMMA           reduce using rule 1 (FINAL -> .)
    RBRA            reduce using rule 1 (FINAL -> .)

    ASOP                           shift and go to state 72
    EXP_W_SIGN                     shift and go to state 73
    FINAL                          shift and go to state 74

state 43

    (10) VARZ -> EQUAL EXP .

    DEFINE          reduce using rule 10 (VARZ -> EQUAL EXP .)
    ID              reduce using rule 10 (VARZ -> EQUAL EXP .)
    IF              reduce using rule 10 (VARZ -> EQUAL EXP .)
    DRAW            reduce using rule 10 (VARZ -> EQUAL EXP .)
    PRINT           reduce using rule 10 (VARZ -> EQUAL EXP .)
    WHILE           reduce using rule 10 (VARZ -> EQUAL EXP .)
    FOR             reduce using rule 10 (VARZ -> EQUAL EXP .)
    INT             reduce using rule 10 (VARZ -> EQUAL EXP .)
    BOOLEAN         reduce using rule 10 (VARZ -> EQUAL EXP .)
    CHAR            reduce using rule 10 (VARZ -> EQUAL EXP .)
    STRING          reduce using rule 10 (VARZ -> EQUAL EXP .)
    FLOAT           reduce using rule 10 (VARZ -> EQUAL EXP .)
    RETURN          reduce using rule 10 (VARZ -> EQUAL EXP .)
    END             reduce using rule 10 (VARZ -> EQUAL EXP .)
    ELSE            reduce using rule 10 (VARZ -> EQUAL EXP .)


state 44

    (75) FAC -> FACS . VAR_CTE
    (68) VAR_CTE -> . ICTE
    (69) VAR_CTE -> . FCTE
    (70) VAR_CTE -> . LLAMADA_FUNCION
    (38) LLAMADA_FUNCION -> . ID LPAR LLAMADA_FUNCIONP RPAR

    ICTE            shift and go to state 78
    FCTE            shift and go to state 77
    ID              shift and go to state 79

    LLAMADA_FUNCION                shift and go to state 75
    VAR_CTE                        shift and go to state 76

state 45

    (65) TERMINO -> FAC . TERMINO_W_SIGN
    (66) TERMINO_W_SIGN -> . MDOP TERMINO
    (67) TERMINO_W_SIGN -> . FINAL
    (28) MDOP -> . MULT
    (29) MDOP -> . DIVI
    (1) FINAL -> .

    MULT            shift and go to state 84
    DIVI            shift and go to state 80
    PLUS            reduce using rule 1 (FINAL -> .)
    MINUS           reduce using rule 1 (FINAL -> .)
    DEFINE          reduce using rule 1 (FINAL -> .)
    ID              reduce using rule 1 (FINAL -> .)
    IF              reduce using rule 1 (FINAL -> .)
    DRAW            reduce using rule 1 (FINAL -> .)
    PRINT           reduce using rule 1 (FINAL -> .)
    WHILE           reduce using rule 1 (FINAL -> .)
    FOR             reduce using rule 1 (FINAL -> .)
    INT             reduce using rule 1 (FINAL -> .)
    BOOLEAN         reduce using rule 1 (FINAL -> .)
    CHAR            reduce using rule 1 (FINAL -> .)
    STRING          reduce using rule 1 (FINAL -> .)
    FLOAT           reduce using rule 1 (FINAL -> .)
    RETURN          reduce using rule 1 (FINAL -> .)
    END             reduce using rule 1 (FINAL -> .)
    ELSE            reduce using rule 1 (FINAL -> .)
    LESSTH          reduce using rule 1 (FINAL -> .)
    GREATERTH       reduce using rule 1 (FINAL -> .)
    SEQUAL          reduce using rule 1 (FINAL -> .)
    NOTEQ           reduce using rule 1 (FINAL -> .)
    LESSEQTH        reduce using rule 1 (FINAL -> .)
    GREATEREQTH     reduce using rule 1 (FINAL -> .)
    RPAR            reduce using rule 1 (FINAL -> .)
    COMMA           reduce using rule 1 (FINAL -> .)
    RBRA            reduce using rule 1 (FINAL -> .)

    FINAL                          shift and go to state 83
    MDOP                           shift and go to state 81
    TERMINO_W_SIGN                 shift and go to state 82

state 46

    (27) ASOP -> MINUS .

    ICTE            reduce using rule 27 (ASOP -> MINUS .)
    FCTE            reduce using rule 27 (ASOP -> MINUS .)
    ID              reduce using rule 27 (ASOP -> MINUS .)
    LPAR            reduce using rule 27 (ASOP -> MINUS .)
    PLUS            reduce using rule 27 (ASOP -> MINUS .)
    MINUS           reduce using rule 27 (ASOP -> MINUS .)


state 47

    (76) FAC -> ID . FACT
    (77) FACT -> . LBRA EXP FACZ RBRA
    (78) FACT -> . FINAL
    (1) FINAL -> .
